src/component/style/nav.module.css
.aside {
    width: 70px;
    opacity: 0;
    top: 0;
    left: -100%;
    height: 100vh;
    position: fixed;
    z-index: var(--z-fixed);
    transition: var(--transition-default) ease-in-out;
    background: var(--white-color);
    /* box-shadow: .25rem 1.25rem 1.25rem var(--light-color); */
}

.aside.active {
    opacity: 1;
    left: 0;
    width: 185px;
    /* box-shadow: .5rem 2.25rem 2.25rem var(--light-color); */
}

.sidebar {
    display: flex;
    flex-direction: column;
    padding: 5rem 1rem 1rem 1rem;
    overflow: hidden;
}

.link {
    display: grid;
    grid-template-columns: max-content max-content;
    column-gap: 1rem;
    padding-left: .725rem;
    margin-bottom: .5rem;
    align-items: center;
    height: 3.25rem;
    border-radius: .5rem;
    transition: margin var(--transition-default) ease-in-out;
}

.link.active {
    color: var(--first-color-lighter);
    background: var(--light-color);
}

.link__icon {
    width: 24px;
    height: 24px;
    transition: var(--transition-default) ease;
}

.link__icon svg {
    display: block;
}

.link__text {
    font-weight: var(--font-semi-bold);
    margin-left: .75rem;
}

.content {
    display: grid;
    grid-template-columns: 1fr;
    width: 100%;
    height: 100%;
    padding-left: 0;
    transition: var(--transition-default);
}

@media screen and (min-height: 550px) {
    /* Set logout nav on bottom later */
}

@media screen and (min-width: 768px) {
    .content {
        padding-left: calc(1.8rem + 70px);
    }

    .aside {
        opacity: 1;
        left: 0;
        background: var(--body-color);
        box-shadow: none;
    }

    .aside.active {
        box-shadow: none;
    }
}

@media screen and (min-width: 1280px) {
    .content {
        display: grid;
        gap: 1.8rem;
        padding: 0;
        grid-template-columns: 75px 1fr;
    }

    .content:has(.aside.active) {
        grid-template-columns: 185px 1fr;
    }

    .aside {
        padding-top: 5.35rem;
    }

    .sidebar {
        padding-top: 0;
    }
}

@media (hover: hover) and (pointer: fine) {
    .aside.active .link:hover .link__icon {
        margin-left: .25rem;
    }

    .aside.active .link:hover {
        color: var(--first-color-lighter);
    }

    .aside.active .link:not(.active):hover .link__icon {
        margin-left: 1rem;
    }

    .aside .link:hover {
        color: var(--first-color-lighter);
    }

    @media screen and (max-width: 1279px) {
        .aside:hover {
            width: 185px;
            /* box-shadow: .5rem 2.25rem 2.25rem var(--light-color); */
        }

        .aside:hover .link:hover .link__icon {
            margin-left: .25rem;
        }

        .aside:hover .link:hover {
            color: var(--first-color-lighter);
        }

        .aside:hover .link:not(.active):hover .link__icon {
            margin-left: 1rem;
        }
    }
}

